# Mirage

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  build.bat  config.json
docs/: CONFIG_EXAMPLE.json  ENHANCEMENT_GUIDE.md
docs/superpowers/plans/: 2026-06-29-mirage-implementation.md
docs/superpowers/specs/: 2026-06-29-mirage-screen-shader-design.md
shaders/: blackhole.hlsl  edge_glow.hlsl  edge_neon.hlsl  glitch_shift.hlsl  ink_spread.hlsl  invert.hlsl  kaleidoscope.hlsl  magnifier.hlsl  test_red.hlsl  warm_color.hlsl  window_boil.hlsl  window_jiggle.hlsl
src/: config_manager.cpp  config_manager.h  d3d11_renderer.cpp  d3d11_renderer.h  input_manager.cpp  input_manager.h  main.cpp  overlay_window.cpp  overlay_window.h  shader_manager.cpp  shader_manager.h
